Closed Bug 1674564 Opened 5 years ago Closed 5 years ago

Perma Assertion failure: !mTimer, at /builds/worker/checkouts/gecko/dom/serviceworkers/ServiceWorkerShutdownBlocker.cpp:258 when Gecko 84 merges to Beta on 2020-11-16

Categories

(Core :: DOM: Service Workers, defect)

defect

Tracking

()

VERIFIED FIXED
84 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox82 --- unaffected
firefox83 --- unaffected
firefox84 --- verified

People

(Reporter: ccoroiu, Assigned: jstutte)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

I do not think that this has been regressed by bug 1588152 alone, since it landed quite a while ago.

But the assert seems to check, if we have a reentrant call to ServiceWorkerShutdownBlocker::MaybeInitUnblockShutdownTimer(). In fact we are calling it in two different sites, which makes me think that some other change causes now a double call.

Simple fix might be to remove the assert and just return if we already initiated the timer on this shutdown blocker. I cannot really see that this would be dangerous, asuth?

Oh, and to avoid different code between nightly and release: Can't we just set a very long timeout in nightly on that timer rather than conditionally compile all that code?

Assignee: nobody → jstutte
Status: NEW → ASSIGNED
Pushed by malexandru@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c387ce5635b3 Make ServiceWorkerShutdownBlocker::MaybeInitUnblockShutdownTimer robust against re-entrance r=dom-workers-and-storage-reviewers,asuth
Flags: needinfo?(bugmail)
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: