Bug 1674564 - Make ServiceWorkerShutdownBlocker::MaybeInitUnblockShutdownTimer robust against re-entrance r=dom-workers-and-storage-reviewers,asuth

Differential Revision: https://phabricator.services.mozilla.com/D95545